...
      />
    );
  if (visualTrackingPlans)
    return (
      <PremiumPlansComparison
        onBack={() => setVisualTrackingPlans(false)}
        testID="visual-tracking-plans-comparison"
      />
    );
  if (animalPlans)
    return (
      <PremiumPlansComparison
        onBack={() => setAnimalPlans(false)}
...
